fix draft state module student progression overflow scrolling
test plan:
* create a course with draft state enabled
* create several students (enough so that visiting the
 module student progressions page, '/courses/X/modules/progressions',
 fills the list of students on the right-hand side
* all of the students should now be accessible with a scroll-bar,
 rather than hidden

fixes #CNVS-11847

Reviewed-on: https://gerrit.instructure.com/32044
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Jeremy Stanley <jeremy@instructure.com>
QA-Review: Nathan Rogowski <nathan@instructure.com>

--- a/app/stylesheets/context_module_progressions.sass
+++ b/app/stylesheets/context_module_progressions.sass
@@ -55,6 +55,7 @@
   .collectionViewItems
     list-style-type: none
     margin-left: 0
+    overflow-y: scroll
     .student
       cursor: pointer
       border-top: solid 1px transparent
